add zookeeper